--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate db for test
+        run: |
+          mkdir -p tmp
+          touch /tmp/
+
       - name: Setup test environment
         run: |
           cp .env.example .env.test || echo "No .env.example found"
