fix(repositories): correct Player entity ORM mapping and database queries
- Fix PlayerModel column mapping for snake_case DB columns (game_id, user_id, is_guest)
│

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/vue3": "^2.0.17",
+    "@types/uuid": "^10.0.0",
     "@vinejs/vine": "^3.0.1",
     "@vue/server-renderer": "^3.5.18",
     "edge.js": "^6.2.1",
@@ -79,6 +80,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0",
     "vue": "^3.5.18"
   },
   "hotHook": {
