ci(dockerfile): creation dockerfile

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,36 @@
-TZ=UTC
+# ================================
+# Environment Variables - w40kScoring
+# ================================
+
+# Application
+NODE_ENV=production
+HOST=0.0.0.0
 PORT=3333
-HOST=localhost
-LOG_LEVEL=info
-APP_KEY=your-32-character-long-app-key-here
-NODE_ENV=development
-SESSION_DRIVER=cookie
-DB_HOST=127.0.0.1
+APP_NAME=w40kScoring
+
+# Security - GENERER AVEC: node ace generate:key
+APP_KEY=base64:REMPLACER_PAR_UNE_CLE_GENEREE
+
+# Database
+DB_CONNECTION=pg
+DB_HOST=localhost
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
+DB_USER=w40k_user
+DB_PASSWORD=w40k_password
 DB_DATABASE=w40k_scoring
+
+# Session (optionnel - utilise la DB par défaut)
+SESSION_DRIVER=cookie
+
+# Storage
+DRIVE_DISK=local
+
+# Logging
+LOG_LEVEL=info
+
+# Options pour Docker
+RUN_SEEDERS=false
+
+# Development only (ne pas utiliser en production)
+# VITE_DEV_SERVER=true
+EOF < /dev/null
