--- a/manifest/adonis-app.yaml
+++ b/manifest/adonis-app.yaml
@@ -64,18 +64,53 @@ spec:
     spec:
       containers:
         - name: adonis
-          image: ghcr.io/mon-org/mon-app:latest  # Image Docker à modifier selon ton registre
+          image: ghcr.io/eliemoriceau/w40kscoring:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3333
+              name: http
           envFrom:
             - configMapRef:
                 name: adonis-config
             - secretRef:
                 name: adonis-secret
+          # Health checks pour Kubernetes
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: http
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+          # Limites de ressources
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          # Security context
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1001
+            runAsGroup: 1001
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
           volumeMounts:
             - name: log-volume
-              mountPath: /home/node/app/tmp/logs  # Modifier selon ton app
+              mountPath: /app/tmp/logs
       volumes:
         - name: log-volume
           emptyDir: {}  # Utilisé ici pour exemple ; à remplacer si persistance nécessaire
