--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       dockerfile: Dockerfile
       target: production
     ports:
-      - "3333:3333"
+      - '3333:3333'
     environment:
       - NODE_ENV=development
       - HOST=0.0.0.0
@@ -42,12 +42,12 @@ services:
       - POSTGRES_PASSWORD=w40k_password
       - POSTGRES_DB=w40k_scoring
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U w40k_user -d w40k_scoring"]
+      test: ['CMD-SHELL', 'pg_isready -U w40k_user -d w40k_scoring']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -60,11 +60,11 @@ services:
   redis:
     image: redis:7-alpine
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ['CMD', 'redis-cli', 'ping']
       interval: 10s
       timeout: 3s
       retries: 3
