--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky",
+    "prepare": "node -e \"if(process.env.NODE_ENV !== 'production'){require('child_process').execSync('husky', {stdio: 'inherit'})}\""
     "commit": "cz"
   },
   "imports": {
